I added the sign-out button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="no_accounts_error">No Account Found</string>
     <string name="sign_up_description">Don\'t have an account? \n Click here to Sign Up!</string>
     <string name="or">or</string>
+    <string name="sign_out">Sign Out</string>
 </resources>
